# cpp-pd-code-simplify

./: .gitignore  CMakeLists.txt  README.md  mid_simplify_v5.py  requirements-dev.txt  snappy_flavor_test.py
docs/: algorithm-and-correctness.md  benchmarking.md  cli.md  cpp-time-analysis.md  header-only.md  heuristic-path-sampling.md  packaging.md  python-cpp-comparison.md  python-interface.md  python.md  snappy-flavor-comparison.md
docs/assets/: benchmark_original_raw.csv  benchmark_original_results.json  benchmark_original_summary.csv  benchmark_random_raw.csv  benchmark_random_results.json  benchmark_random_summary.csv  benchmark_raw.csv  benchmark_results.json  benchmark_summary.csv  cpp_zip_random_100_time_scatter.csv  cpp_zip_random_100_time_scatter.json  cpp_zip_random_30_time_scatter.json  heuristic_vs_bruteforce_random_raw.csv  heuristic_vs_bruteforce_random_results.json  heuristic_vs_bruteforce_random_summary.csv  snappy_flavor_comparison.csv
include/pdcode_simplify/: pdcode_simplify.hpp
python_project/cpp-pd-code-simplify-interface/: README.md  pyproject.toml
scripts/: build.ps1  build.sh
src/: main.cpp  pdcode_simplify.cpp
tests/: benchmark_random_pd_codes.txt  test_pdcode_simplify.cpp
tests/fixtures/: pd_k0.txt  pd_k14.txt  reference_31_pd.txt
tools/: benchmark_cpp_heuristic.py  benchmark_cpp_python.py  benchmark_cpp_zip_scatter.py  benchmark_dataset.py  compare_cpp_python.py  package.py  test_cpp_output_diagram_sanity.py  test_python_interface.py  test_python_prototype.py  test_random_invariant_profile.py  test_random_khovanov_invariance.py
(+5 files in other folders)
